--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <img src="logoo.png" class="logo">
       <ul>
         <li><a href="#">HOME</a></li>
-        <li><a href="file:///C:/CESS/images/about.html">ABOUT</a></li>
-        <li><a href="file:///C:/CESS/images/other.html">OTHER</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="file:other.html">OTHER</a></li>
       </ul> 
     </nav>
     <div class="detel">
       <h1>I'm Cess <span>Alis</span></h1>
       <p>Hello! Welcome to my very first website.</p>
-      <a href="file:///C:/CESS/images/contactme.html">CONTACT ME</a>
+      <a href="contactme.html">CONTACT ME</a>
     </div>
     <div class="images">
       <img src="shapeee.png" class="shape">
