--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
     <nav>
       <img src="logoo.png" class="logo">
       <ul>
-        <li><a href="file:///C:/CESS/images/index.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="#">ABOUT</a></li>
-        <li><a href="file:///C:/CESS/images/other.html">OTHER</a></li>
+        <li><a href="other.html">OTHER</a></li>
       </ul> 
     </nav>
     <div class="detel1">
