--- a/other.html
+++ b/other.html
@@ -12,8 +12,8 @@
     <nav>
       <img src="logoo.png" class="logo">
       <ul>
-        <li><a href="file:///C:/CESS/images/index.html">HOME</a></li>
-        <li><a href="file:///C:/CESS/images/about.html">ABOUT</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
         <li><a href="#">OTHER</a></li>
       </ul> 
     </nav>  
